[tool.poetry]
name = "hexagon"
version = "0.1.0"
description = ""
authors = ["Сергей <sergey.vasilev.98@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
h3 = "4.0.0b1"
uvicorn = "^0.34.2"
geopy = "^2.4.1"
pydantic = "^2.11.5"
numpy = "^2.2.6"
shapely = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
